[tool.poetry]
name = "unitable"
version = "0.1.0"
description = ""
authors = ["tuanshu <tuanshu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
lxml = "4.9.3"
python = "^3.10"
torch = "^2.3.0"
torchvision = "*"
torchaudio = "*"
torchtext = "*"
jsonlines = "*"
beautifulsoup4 = "*"
matplotlib = "*"
hydra-core = "*"
hydra_colorlog = "*"
apted = "*"
Distance = "*"
torchmetrics = "*"
wandb = "*"
einops = "*"
ptflops = "*"
tokenizers = "*"
pycocotools = "*"
faster-coco-eval = "*"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
